Don't attempt to access the kernel settings if the kernel hasn't been registered yet.

BUG: 286762
FIXED-IN: 4.7.4
MERGE: 4.7